# coq-uplc

./: .gitignore  LICENSE  Makefile  README.md  coq-uplc.opam  dune-project  flake.nix
.github/workflows/: ci.yaml
src/: dune  dune-project
theories/: Placeholder.v  dune
theories/Cbor/: Encoding.v
theories/Examples/: Examples01.v  Examples02.v
theories/PlutusV3/: Builtins.v  CekMachine.v  CekValue.v  Uplc.v  UplcShow.v
theories/PlutusV3/BuiltinFunctions/: Bool.v  ByteString.v  Data.v  Evaluate.v  Integer.v  List.v  Misc.v  Pair.v  String.v
theories/Prelude/: Bytes.v  FunctionalNotations.v  List.v  Monad.v  Option.v  Show.v
theories/Unicode/: String.v  StringShow.v  Utf8Encoding.v
theories/Uplc/: Builtins.v  CekMachine.v  CekValue.v  Term.v  TermShow.v
theories/Uplc/BuiltinFunctions/: Bool.v  ByteString.v  Data.v  Evaluate.v  Integer.v  List.v  Misc.v  Pair.v  String.v
