(lang dune 3.12)
(using coq 0.8)
(generate_opam_files true)

(name coq-uplc)

(source
 (github Anastasia-Labs/coq-uplc))

(authors "Mark Petruska")
(maintainers "Mark Petruska")

(license MIT)

(package
 (name coq-uplc)
 (synopsis "Cardano CEK implementation in Coq")
 (depends coq)
 ; (description "")
 )
